--- a/BlogApplication/BlogApplication/Views/User/Index.cshtml
+++ b/BlogApplication/BlogApplication/Views/User/Index.cshtml
@@ -1,8 +1,45 @@
 ﻿@using DataLayer.Models;
-@model IEnumerable<User>
+@model IEnumerable<DataLayer.Models.User>
 
 <h1>Users</h1>
 
+<!-- Create User Form -->
+<div id="createUserForm" style="display: none;">
+    <h2>Create User</h2>
+    <form id="createUser">
+        <label for="createUsername">Username:</label>
+        <input type="text" id="createUsername" name="Username" required>
+
+        <label for="createPassword">Password:</label>
+        <input type="password" id="createPassword" name="Password" required>
+
+        <label for="createEmail">Email:</label>
+        <input type="email" id="createEmail" name="Email" required>
+
+        <button type="submit">Create</button>
+    </form>
+</div>
+
+<!-- Edit User Form -->
+<div id="editUserForm" style="display: none;">
+    <h2>Edit User</h2>
+    <form id="editUser">
+        <input type="hidden" id="editUserId" name="UserId">
+
+        <label for="editUsername">Username:</label>
+        <input type="text" id="editUsername" name="Username" required>
+
+        <label for="editPassword">Password:</label>
+        <input type="password" id="editPassword" name="Password" required>
+
+        <label for="editEmail">Email:</label>
+        <input type="email" id="editEmail" name="Email" required>
+
+        <button type="submit">Update</button>
+    </form>
+</div>
+
+<!-- User List -->
 <table>
     <thead>
         <tr>
@@ -11,21 +48,22 @@
             <th>Actions</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="userList">
         @foreach (var user in Model)
         {
             <tr>
                 <td>@user.Username</td>
                 <td>@user.Email</td>
                 <td>
-                    <a href="/User/Details/@user.UserId">Details</a> |
-                    <a href="/User/Edit/@user.UserId">Edit</a> |
-                    <a href="/User/Delete/@user.UserId">Delete</a>
+                    <button onclick="showEditForm(@user.UserId)">Edit</button>
+                    <button onclick="deleteUser(@user.UserId)">Delete</button>
                 </td>
             </tr>
-        }
         }
     </tbody>
 </table>
 
-<a href="/User/Create">Create New User</a>
+<button onclick="showCreateForm()">Create New User</button>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="~/js/user.js"></script>
